# python-module

./: .code-workspace  .gitignore  Dockerfile  Makefile  docker-compose.yaml  user-action.csv
app/: .gitignore  README.md  logger.py  pyproject.toml  run.sh
app/curl/: main.py
app/df/: main.py
app/df/_module/: compare_2column.py  merge_csv.py
app/src/module/df/_module/: extract_column.py
app/src/module/mdl-compression/: README.md  main.py
app/src/module/mdl-compression/compression/: compress_pdf.py
app/src/module/mdl-compression/poetry-docker/: Dockerfile
app/src/module/pandas-playground/: Makefile
app/src/module/pandas-playground/src/: main.merge_same_column.py  main.sample.py
app/src/module/pandas-playground/src/domain/: count_column.py
app/src/module/pandas-playground/src/domain/merge/: merge_files.py
app/src/module/photo/: pyproject.toml
app/src/module/photo/src/: main.py
app/src/module/photo/src/domain/: rename_capture_date.py
app/src/module/sendgrid/: main.py  secret.py
app/src/module/server/: fastapi.py
app/src/test/: sample.test.py
app/src/work/20241112/: main.py
app/src/work/20241113/: main.py
app/src/work/20241114/: main.py
change_encode/: pyproject.toml
change_encode/src/: main.py
compare_csv_files/: pyproject.toml
compare_csv_files/src/: main.py
mdl-compression/: main.py  pyproject.toml
merge_csv_files/: pyproject.toml
merge_csv_files/src/: main.py
merge_files/src/: check_csv_in_filename.py  main.py
pandas-playground/: Makefile  pyproject.toml
pandas-playground/src/: main.py  main.sample.py
pandas-playground/tests/: update_col_test.py
pdf/: main.py
photo/: pyproject.toml
photo/src/: main.py
photo/src/domain/: increment_number.py  rename_increment_number.py
prj-docker/src/domain/: sample.py
rename-img-file/src/: main.py
rename_fileneme/src/: main.py
rename_fileneme/src/domain/: extract_number.py  increment_number.py
sendgrid/: main.py
src/: main.py
template/prj-docker/src/: main.py
