[tool.poetry]
name = "pandas-playground"
version = "0.1.0"
description = ""
authors = ["Kaito Suzuki <snails8d@gmail.com>"]
readme = "README.md"
packages = [{include = "pandas_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
