[tool.poetry]
name = "rename-img-file"
version = "0.1.0"
description = ""
authors = ["Kaito Suzuki <snails8d@gmail.com>"]
readme = "README.md"
packages = [{include = "rename_img_file"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
